' Generated by UML Generator
' Encoded: nLTDRzim3BtdLmZOnLcQOBiQMz7q2nsG3K5os67OGR6PHAWj1PASeElMtpvPScnzkUtG5RsuCCb7laTJZ7ec9EQoAek1k2LqXpakKLPW8QPIShAg97p965sINu0-3BOa1vGHdXKm6E2La1ndqeIZQIO9evUGCOubu-X-WD3umF5k1xdnfKZbnDcjUQlTO_Luvm6JHp33Edu3yhiTaWo3n2CLOrw-uHBgWAKIGpUDwnANUAFDXCh6ThLUGoQNLLbYVcSX_Wm6AWZu6cVWbD427_eBFKGAFJnUo3Jo70kIcKgcYRWjOAKVhx00a_-ONRTpPC6J47c2FDpmlxVBgBZWH98C5zSiguGx5QEuxwaF_neihmc7HKN18nYOtuBRd171w0N3KfazWd7VMx0yPq9SKIZlpAnIRqgtW0kvRISKQqPpTW3kJUqnJKATQRNm9yX77pL5rTnefAjcsYMm71BVDYSYmIMhg3J9KxHd9Ay3Y9WMPAzBh1Wh0DDE_pJV0vMLcXSGLI6RjKSehJbsVU0gRovQpHmEcETsGC4sAPeH8JyPsodwZ2WSq9HpVAVjfycmRLUz0tKDLxPepIu3Iuj2BZGNgm6YjLaqFOmc75HhpAuS2udpV4Oe98LwnCdCsAREQYktLw6K1Io1xudQlhgr7DESbIbQwBzDaynByd7MTQWcfwrBW3mHwf6YWkdgJjOwTgKDoHOuIz6DUiuvMvC2rB9KOvbsCwv6C7QqKdyAEWMN5Tq0ezSumtcZOCUX_fcjaGs75Cq3MwCiT9WfMDaQF4aDrB4PbFbEBMfXlnvRQTkIP_NJqLZ7yegs3NcLhaRQfTUYQUsBQlhxpUsHhfA3kW-KQgARwJVVmd0CI4TIMhoUjJHr_orG_uhyjuNuehtt5HDp1HhTgnka-Zd_WqfbIZ3VY6FX7p-FoHJClnzE9hzFtNkR7_5-F7O3x9jH2E-vSOp7TQ2RkYzsCl5oXlU3QBemBCZKysiUJTSJ6-HqJttjTbTRwBUcA8O-dew8xud2_b5rzrxz9SCp6mbo-OT-vpHw_fg6kuf2lwq_z7RwGv-ZF-Bsz4Ssb5-_9wGZqHFWC77NKup96T1S_Nlt5m
' URL: http://www.plantuml.com/plantuml/uml/nLTDRzim3BtdLmZOnLcQOBiQMz7q2nsG3K5os67OGR6PHAWj1PASeElMtpvPScnzkUtG5RsuCCb7laTJZ7ec9EQoAek1k2LqXpakKLPW8QPIShAg97p965sINu0-3BOa1vGHdXKm6E2La1ndqeIZQIO9evUGCOubu-X-WD3umF5k1xdnfKZbnDcjUQlTO_Luvm6JHp33Edu3yhiTaWo3n2CLOrw-uHBgWAKIGpUDwnANUAFDXCh6ThLUGoQNLLbYVcSX_Wm6AWZu6cVWbD427_eBFKGAFJnUo3Jo70kIcKgcYRWjOAKVhx00a_-ONRTpPC6J47c2FDpmlxVBgBZWH98C5zSiguGx5QEuxwaF_neihmc7HKN18nYOtuBRd171w0N3KfazWd7VMx0yPq9SKIZlpAnIRqgtW0kvRISKQqPpTW3kJUqnJKATQRNm9yX77pL5rTnefAjcsYMm71BVDYSYmIMhg3J9KxHd9Ay3Y9WMPAzBh1Wh0DDE_pJV0vMLcXSGLI6RjKSehJbsVU0gRovQpHmEcETsGC4sAPeH8JyPsodwZ2WSq9HpVAVjfycmRLUz0tKDLxPepIu3Iuj2BZGNgm6YjLaqFOmc75HhpAuS2udpV4Oe98LwnCdCsAREQYktLw6K1Io1xudQlhgr7DESbIbQwBzDaynByd7MTQWcfwrBW3mHwf6YWkdgJjOwTgKDoHOuIz6DUiuvMvC2rB9KOvbsCwv6C7QqKdyAEWMN5Tq0ezSumtcZOCUX_fcjaGs75Cq3MwCiT9WfMDaQF4aDrB4PbFbEBMfXlnvRQTkIP_NJqLZ7yegs3NcLhaRQfTUYQUsBQlhxpUsHhfA3kW-KQgARwJVVmd0CI4TIMhoUjJHr_orG_uhyjuNuehtt5HDp1HhTgnka-Zd_WqfbIZ3VY6FX7p-FoHJClnzE9hzFtNkR7_5-F7O3x9jH2E-vSOp7TQ2RkYzsCl5oXlU3QBemBCZKysiUJTSJ6-HqJttjTbTRwBUcA8O-dew8xud2_b5rzrxz9SCp6mbo-OT-vpHw_fg6kuf2lwq_z7RwGv-ZF-Bsz4Ssb5-_9wGZqHFWC77NKup96T1S_Nlt5m
' Generated on: 2026-03-16T07:57:05.616933

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class ActionDecorator {
  -wrappedAction: AttackAction
  --
  #ActionDecorator(wrappedAction: AttackAction)
  #getWrappedAction(): AttackAction
  +getActionName(): String
  +getDamage(): int
  +getEffectSummary(): String
}

interface AttackAction {
  ~getActionName(): String
  ~getDamage(): int
  ~getEffectSummary(): String
}

class BasicAttack {
  -actionName: String
  -baseDamage: int
  --
  +BasicAttack(actionName: String, baseDamage: int)
  +getActionName(): String
  +getDamage(): int
  +getEffectSummary(): String
}

class CriticalFocusDecorator {
  +CriticalFocusDecorator(wrappedAction: AttackAction)
  +getActionName(): String
  +getDamage(): int
  +getEffectSummary(): String
}

class FireRuneDecorator {
  +FireRuneDecorator(wrappedAction: AttackAction)
  +getActionName(): String
  +getDamage(): int
  +getEffectSummary(): String
}

class PoisonCoatingDecorator {
  +PoisonCoatingDecorator(wrappedAction: AttackAction)
  +getActionName(): String
  +getDamage(): int
  +getEffectSummary(): String
}

class BossEnemy {
  -name: String
  -health: int
  -attackPower: int
  --
  +BossEnemy(name: String, health: int, attackPower: int)
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
}

class AdventureResult {
  -winner: String
  -rounds: int
  -reward: String
  -log: List<String> = new ArrayList<>()
  --
  +getWinner(): String
  +setWinner(winner: String): void
  +getRounds(): int
  +setRounds(rounds: int): void
  +getReward(): String
  +setReward(reward: String): void
  +addLine(line: String): void
  +getLog(): List<String>
}

class BattleService {
  -random: Random = new Random(1L)
  --
  +setRandomSeed(seed: long): BattleService
  +battle(hero: HeroProfile, boss: BossEnemy, action: AttackAction): AdventureResult
}

class DungeonFacade {
  -preparationService: PreparationService = new PreparationService()
  -battleService: BattleService = new BattleService()
  -rewardService: RewardService = new RewardService()
  --
  +setRandomSeed(seed: long): DungeonFacade
  +runAdventure(hero: HeroProfile, boss: BossEnemy, action: AttackAction): AdventureResult
}

class PreparationService {
  +prepare(hero: HeroProfile, boss: BossEnemy, action: AttackAction): String
}

class RewardService {
  +determineReward(battleResult: AdventureResult): String
}

class HeroProfile {
  -name: String
  -health: int
  --
  +HeroProfile(name: String, health: int)
  +getName(): String
  +getHealth(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
}

class Main {
  +{static} main(args: String[]): void
}

ActionDecorator ..|> AttackAction
ActionDecorator *-- AttackAction
BasicAttack ..|> AttackAction
CriticalFocusDecorator --|> ActionDecorator
CriticalFocusDecorator ..> AttackAction
FireRuneDecorator --|> ActionDecorator
FireRuneDecorator ..> AttackAction
PoisonCoatingDecorator --|> ActionDecorator
PoisonCoatingDecorator ..> AttackAction
BattleService ..> BattleService
BattleService ..> HeroProfile
BattleService ..> BossEnemy
BattleService ..> AttackAction
BattleService ..> AdventureResult
DungeonFacade *-- PreparationService
DungeonFacade *-- BattleService
DungeonFacade *-- RewardService
DungeonFacade ..> DungeonFacade
DungeonFacade ..> HeroProfile
DungeonFacade ..> BossEnemy
DungeonFacade ..> AttackAction
DungeonFacade ..> AdventureResult
PreparationService ..> HeroProfile
PreparationService ..> BossEnemy
PreparationService ..> AttackAction
RewardService ..> AdventureResult
@enduml